@@ -1,3 +1,8 @@
+02 September 2007
+
+* More changes to io.c/command.c to fix issues on Linux introduced by fixes to
+  IMAP-over-pipe. Hopefully all working now.
+
 31 August 2007
 
 * Rewrote user header searching and address matching to clean up the code and
@@ -607,4 +612,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.154 2007-09-02 17:14:36 nicm Exp $
+$Id: CHANGES,v 1.155 2007-09-02 17:48:11 nicm Exp $
